--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -2,6 +2,10 @@ $desktop-width: 1440px;
 $tablet-width: 1100px;
 $mobile-width: 800px;
 
+$columns: 12;
+$column-margin: 16px;
+$container-margin: 112px;
+
 $gray-1: #101010;
 $gray-2: #232323;
 $gray-3: #868686;
