feat: add catd component with basic markup

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,4 +3,5 @@
 @import "./grid";
 @import "./header";
 @import "./footer";
-@import "./colored-backgrounds"
+@import "./colored-backgrounds";
+@import "./card";
