feat: add props to card

--- a/assets/styles/_card.scss
+++ b/assets/styles/_card.scss
@@ -1,5 +1,35 @@
+@use 'sass:math';
 .cards-container {
-  margin-top: 59px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.card-container {
+  padding: 0 $column-margin;
+  box-sizing: border-box;
+}
+@media screen and (min-width: $tablet-width) {
+  .card-container {
+    width: math.div(100%, $columns) * 3;
+    margin-top: 59px;
+  }
+}
+@media (min-width: ($mobile-width + 200)) and (max-width: ($tablet-width - 0.1)) {
+  .card-container {
+    width: math.div(100%, $columns) * 4;
+    margin-top: 40px;
+  }
+}
+@media (min-width: ($mobile-width)) and (max-width: ($mobile-width + 199.9)) {
+  .card-container {
+    width: math.div(100%, $columns) * 6;
+    margin-top: 40px;
+  }
+}
+@media screen and (max-width: ($mobile-width - 0.1)) {
+  .card-container {
+    width: math.div(100%, $columns) * 12;
+    margin-top: 36px;
+  }
 }
 .card {
   position: relative;
@@ -7,6 +37,7 @@
   flex-direction: column;
 
   &:hover {
+    cursor: pointer;
     & > .card__content {
       transform: translateY(-32px);
     }
@@ -21,14 +52,20 @@
 
   &__description {
     margin-top: 24px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 
   &__image {
     overflow: hidden;
     display: flex;
     justify-content: center;
+    background-color: $gray-4;
     & > img {
-      height: 280px;
+      width: 100%;
+      min-height: 100px;
       display: block;
     }
   }
