--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -10,6 +10,7 @@ $gray-1: #101010;
 $gray-2: #232323;
 $gray-3: #868686;
 $gray-4: #F3F3F3;
+$gray-5: #E8E8E8;
 $white: #FFFFFF;
 $green: #9EFFBF;
 $purple: #7941A7;
