--- a/assets/styles/_grid.scss
+++ b/assets/styles/_grid.scss
@@ -61,6 +61,15 @@
   &-9 {
     margin-top: 140px;
   }
+  &-article-image {
+    margin-top: 73px;
+  }
+  &-article-pre {
+    margin-top: 80px;
+  }
+  &-article-text {
+    margin-top: 30px;
+  }
 }
 .b {
   &-0 {
@@ -89,5 +98,8 @@
   }
   &-8 {
     margin-bottom: 140px;
+  }
+  &-article-post {
+    margin-bottom: 80px;
   }
 }
