--- a/assets/styles/_footer.scss
+++ b/assets/styles/_footer.scss
@@ -23,4 +23,26 @@
     margin: 0 $column-margin;
   }
 
+  &__button {
+    position: absolute;
+    width: 358px;
+    height: 358px;
+    border-radius: 50%;
+    color: #ffffff;
+    background-color: black;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    & > * {
+      position: absolute;
+      left: 50%;
+      top: 25%;
+      transform: translateX(-50%);
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-width) {
+  .footer {
+    flex-direction: column;
+  }
 }
