--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -12,6 +12,7 @@
   justify-content: flex-end;
   &__menu {
     display: flex;
+    align-items: center;
   }
   &__link:nth-child(n + 2) {
     margin-left: 58px;
@@ -21,7 +22,33 @@
     flex: 0 1 301px;
     justify-content: flex-end;
   }
-  &__button:nth-child(n + 2) {
-    margin-left: 16px;
+  &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:nth-child(n + 2) {
+      margin-left: 16px;
+    }
+  }
+}
+.button {
+  &_light {
+    width: 52px;
+    height: 52px;
+    flex: 0 0 52px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    border: 2px solid $gray-5;
+  }
+  &_dark {
+    color: $white;
+    background-color: $gray-1;
+    border-radius: 999px;
+    padding: 16px 32px;
+  }
+}
+@media screen and (max-width: $mobile-width) {
+  .navigation__menu {
+    display: none;
   }
 }
